--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+     "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
+  
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@ducanh2912/next-pwa": "^10.2.5",
+    "@jridgewell/sourcemap-codec": "^1.5.5",
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.0",
@@ -18,8 +21,10 @@
     "dexie": "^3.2.4",
     "dexie-react-hooks": "^1.1.7",
     "framer-motion": "^11.0.8",
+    "glob": "^13.0.0",
+    "inflight": "^1.0.6",
     "lucide-react": "^0.344.0",
-    "next": "14.1.0",
+    "next": "^16.1.6",
     "next-auth": "^5.0.0-beta.30",
     "react": "^18",
     "react-dom": "^18",
@@ -27,13 +32,13 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/bcryptjs": "^2.4.6"
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
