--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build --webpack",
     "start": "next start",
     "lint": "next lint",
-    "vercel-build": "prisma generate && prisma db push && next build"
+    "vercel-build": "prisma generate && prisma db push && next build --webpack"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
