--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@ducanh2912/next-pwa": "^10.2.5",
+    "@google/generative-ai": "^0.24.1",
     "@jridgewell/sourcemap-codec": "^1.5.5",
     "@prisma/client": "^5.22.0",
-    "prisma": "^5.22.0",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
@@ -26,6 +26,7 @@
     "lucide-react": "^0.344.0",
     "next": "^16.1.6",
     "next-auth": "^5.0.0-beta.30",
+    "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
