fix: disable overly strict hooks rules and fix unescaped quote

--- a/package.json
+++ b/package.json
@@ -25,15 +25,22 @@
     "@google/generative-ai": "~0.24",
     "@prisma/client": "~5.22",
     "bcryptjs": "~3.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "dexie": "^4.3.0",
+    "dexie-react-hooks": "^4.2.0",
+    "framer-motion": "^12.34.3",
     "lucide-react": "~0.479",
     "next": "~16.1",
     "next-auth": "~5.0.0-beta.30",
     "prisma": "~5.22",
     "react": "~18.3",
     "react-dom": "~18.3",
+    "tailwind-merge": "^3.5.0",
     "zod": "~4.3"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
     "@types/bcryptjs": "~2.4",
     "@types/node": "~22.13",
     "@types/react": "~18.3",
