--- a/package.json
+++ b/package.json
@@ -41,19 +41,19 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
+    "@tailwindcss/postcss": "^4.2.0",
     "@types/bcryptjs": "~2.4",
-    "@types/node": "~22.13",
+    "@types/node": "~22.13.4",
     "@types/react": "~18.3",
     "@types/react-dom": "~18.3",
-    "autoprefixer": "~10.4",
     "eslint": "~9.20",
     "eslint-config-next": "~16.1",
     "husky": "~9.1",
-    "lint-staged": "~15.4",
+    "lint-staged": "~16.2.7",
     "postcss": "~8.5",
     "prettier": "~3.5",
-    "tailwindcss": "~3.4",
-    "typescript": "~5.8"
+    "tailwindcss": "~4.2.0",
+    "typescript": "~5.9.3"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
