--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ducanh2912/next-pwa": "~10.2",
     "@google/generative-ai": "~0.24",
     "@prisma/client": "~5.22",
+    "@vercel/analytics": "^1.6.1",
     "bcryptjs": "~3.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
